[gd_scene load_steps=8 format=3 uid="uid://cjioum4km4f43"]

[ext_resource type="Script" path="res://user_interface/player_hud_canvas/boss_info/boss_info.gd" id="1_2jut1"]
[ext_resource type="FontFile" uid="uid://b7bhxk05x7pwi" path="res://assets/fonts/aseprite-remix.ttf" id="2_vgi5s"]
[ext_resource type="PackedScene" uid="uid://c1mef3esxg5jh" path="res://user_interface/UI_attached_to_enemies/element_indicator.tscn" id="3_tbg21"]
[ext_resource type="PackedScene" uid="uid://oml2t17eroh7" path="res://user_interface/UI_attached_to_enemies/debuff_indicator.tscn" id="4_7eoc1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1xrc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4s80h"]
bg_color = Color(0.823921, 0.160846, 0.185811, 1)

[sub_resource type="LabelSettings" id="LabelSettings_o661x"]
font = ExtResource("2_vgi5s")
font_size = 9

[node name="BossInfo" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_2jut1")

[node name="MarginContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -63.0
offset_right = 200.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="BossHP" type="ProgressBar" parent="MarginContainer/VBox"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.6)
custom_minimum_size = Vector2(350, 15)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_u1xrc")
theme_override_styles/fill = SubResource("StyleBoxFlat_4s80h")
value = 100.0
show_percentage = false

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="BossName" type="Label" parent="MarginContainer/VBox/HBox"]
layout_mode = 2
text = "Armored Railbow"
label_settings = SubResource("LabelSettings_o661x")
horizontal_alignment = 1

[node name="BossBox" type="HBoxContainer" parent="MarginContainer/VBox/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 1

[node name="element_indicator" parent="MarginContainer/VBox/HBox/BossBox" instance=ExtResource("3_tbg21")]
unique_name_in_owner = true
layout_mode = 2

[node name="debuff_indicator" parent="MarginContainer/VBox/HBox/BossBox" instance=ExtResource("4_7eoc1")]
unique_name_in_owner = true
layout_mode = 2
